--- a/app.wxss
+++ b/app.wxss
@@ -3,12 +3,18 @@
 page{
   background: #F6F8F8;
   color: #363636;
+  font-family: "Monospaced Number", "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.margin_top40{
+  margin: 40rpx 0;
 }
 
 .margin34{
   margin-left: 34rpx;
   margin-right: 34rpx;
 }
+
 
 .margin_l_34{
   margin-left: 34rpx;
@@ -20,6 +26,14 @@ page{
 
 .margin_l_100{
   margin-left: 100rpx;
+}
+
+.margin_top20{
+  margin-top: 20rpx;
+}
+
+.padding_bottm40{
+  padding-bottom: 40rpx;
 }
 
 .padding_34{
@@ -61,6 +75,29 @@ page{
   color: #666666;
 }
 
+.color6{
+  color: #F29928;
+}
+
+.color7{
+  color:#38358F;
+}
+
+.color8{
+  color:#F57929;
+}
+
+.color9{
+  color:#C464E6;
+}
+
+.color10{
+  color:#F2AF0F;
+}
+
+.color11{
+  color:#C3CDCA;
+}
 
 .weight500{
     font-weight: 500;
@@ -70,8 +107,28 @@ page{
     font-weight: 400;
 }
 
+.font-weight_b{
+  font-weight: bold;
+}
+
+.font_size30{
+  font-size: 30rpx;
+}
+
+.font_size54{
+  font-size: 54rpx;
+}
+
+.font_size24{
+  font-size: 24rpx;
+}
+
+.font_size28{
+  font-size: 28rpx;
+}
+
 .bg1{
-  background:#C5CDCB;
+  background:#D6D6E5;
 }
 
 .bg2{
@@ -80,4 +137,21 @@ page{
 
 .bg3{
   background:linear-gradient(135deg,rgba(18,194,134,1) 0%,rgba(19,194,134,1) 10%,rgba(21,196,133,1) 20%,rgba(25,198,132,1) 28%,rgba(28,201,130,1) 36%,rgba(32,204,128,1) 43%,rgba(35,207,126,1) 49%,rgba(39,210,123,1) 55%,rgba(42,214,121,1) 61%,rgba(45,217,118,1) 67%,rgba(47,220,116,1) 73%,rgba(49,222,114,1) 79%,rgba(51,224,112,1) 85%,rgba(52,226,111,1) 92%,rgba(52,226,111,1) 100%);
+}
+
+.bg4{
+  background:linear-gradient(132deg,rgba(86,90,120,1) 0%,rgba(84,88,118,1) 5%,rgba(82,86,116,1) 11%,rgba(80,84,113,1) 17%,rgba(77,81,111,1) 23%,rgba(74,78,108,1) 29%,rgba(71,75,105,1) 36%,rgba(68,71,101,1) 43%,rgba(64,68,98,1) 50%,rgba(61,65,95,1) 58%,rgba(57,61,92,1) 65%,rgba(54,58,89,1) 73%,rgba(51,54,86,1) 82%,rgba(48,52,83,1) 91%,rgba(45,49,81,1) 100%);
+border-radius:4px 4px 100px 100px;
+}
+
+.bg5{
+  background: #38358F;
+}
+
+.bg6{
+  background: #F57929;
+}
+
+.dispaly_flex{
+  display: flex;
 }
