--- a/pages/add-insurance/add.wxss
+++ b/pages/add-insurance/add.wxss
@@ -6,25 +6,38 @@
 .input-placeholder{
 	color: #999;
 	font-weight:400;
-	font-size:28rpx;
+	font-size:26rpx;
 }
 
 .showTop_box input{
-	margin-left: 34rpx;
 	padding-top: 39rpx;
 	padding-bottom: 39rpx;
+	width: 80%;
+
+}
+
+.name_box{
+	position: relative;
+	margin-left: 34rpx;
 	border-bottom: 1rpx solid #F3F5F7;
+}
+
+.icon-xiangji{
+	position: absolute;
+	right: 34rpx;
+	font-size: 50rpx;
+	margin-top: 34rpx;
+	color: #F57929;
 }
 
 .remind{
  	color: #EA4335;
 	font-size: 28rpx;
-	margin-top: 24rpx;
-	margin-bottom:24rpx ;
+	/* margin-top: 24rpx;
+	margin-bottom:24rpx ; */
 }
 
 .scroll{
-	max-height:276rpx;
 	background: #F6F8F8;
 	/* padding: 24rpx 0; */
 }
@@ -63,22 +76,21 @@
 
 .top_box{
   width: 750rpx;
-  height: 468rpx;
+  height: 276rpx;
+  color: #FFF;
   background-repeat: no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
   -o-background-size: cover;
   background-position: center 0;
-  background-image: url('http://lgb.laowuquan.cc/assets/api/customer-bg-dark.png');
+  background-image: url('https://laowuquan.oss-cn-shanghai.aliyuncs.com/yunxiaobao/add-subtract-bg.png');
 }
 
 .top_box .title{
-	color: #FFF;
-	font-size: 54rpx;
+	font-size: 48rpx;
 	font-weight:500;
-	margin-left: 88rpx;
+	margin-left: 34rpx;
 	padding-top: 64rpx;
-
 }
 
 .top_box .Introduction{
@@ -90,17 +102,33 @@
 	color: #ABBDCD;
 }
 
+.top_box .plan_box{
+	display: flex;
+	margin-top: 12rpx;
+	color: rgba(255,255,255,.6);
+}
+
 .add_box{
-	width: 682rpx;
-	height: 96rpx;
-	background: rgba(255, 255, 255, 0.12);
-	font-size: ;
-	margin: 0 auto;
-	margin-top: 54rpx;
+	display: flex;
+	margin-left: 34rpx;
+	margin-right: 34rpx;
+	background:#fff;
+	border-radius: 12rpx;
+	padding: 31rpx 42rpx;
+	margin-top: -70rpx;
+	justify-content: space-between;
+}
+
+.add{
+	width: 66rpx;
+	height: 66rpx;
+	background:#38358F;
 	text-align: center;
-	line-height: 96rpx;
-	color:rgba(255, 255, 255, 0.3);
-	font-size: 50rpx;
+	line-height: 66rpx;
+	color: #fff;
+	font-size: 35rpx;
+	border-radius: 50%;
+	margin:auto 0;
 }
 
 .title_box{
@@ -125,9 +153,9 @@
 }
 
 .list_box{
-	min-height: 624rpx;
-	background: #FFF;
-	padding-bottom: 100rpx;
+	margin-bottom: 130rpx;
+	margin-top: 24rpx;
+	border-radius: 4rpx;
 }
 
 .list_box .none{
@@ -140,18 +168,19 @@
 	width: 100%;
 	display:inline-block;
 	margin-top: 20rpx;
+	background:#fff;
 }
 
 .company_box{
 	display: flex;
 	align-items: center;
+	margin-top: 34rpx;
 }
 
 .list .decoration{
 	width: 8rpx;
 	height: 24rpx;
-	background: #000;
-    background:linear-gradient(315deg,rgba(0,223,179,1) 0%,rgba(0,197,219,1) 100%);
+    background:#38358F;
     margin-right: 18rpx;
 }
 
@@ -195,7 +224,7 @@
 .name_info .delete{
 	width: 34rpx;
 	height: 34rpx;
-	background: #12C286;
+	background: #F57929;
 	color: #FFF;
 	border-radius: 50%;
 	line-height: 32rpx;
@@ -216,4 +245,31 @@
 
 .add_insurance button::after{
   border: none;
+}
+
+.camera {
+	position: absolute;
+	top: 0;
+    width: 100%;
+    height: 100%;
+    z-index:9999;
+}
+
+.cover-guide {    
+    width: 100%;
+    height: 100%;
+}
+
+.cover-1 {
+    width: 150rpx;
+    height: 150rpx;
+    border-radius: 150rpx;
+    background-color: #dedcdc;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 50rpx;
+    left: 300rpx;
 }
