--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,21 @@
 /**index.wxss**/
 .top_box {
-  width:750rpx;
-  height:326rpx;
-  background:linear-gradient(132deg,rgba(86,90,120,1) 0%,rgba(84,88,118,1) 5%,rgba(82,86,116,1) 11%,rgba(80,84,113,1) 17%,rgba(77,81,111,1) 23%,rgba(74,78,108,1) 29%,rgba(71,75,105,1) 36%,rgba(68,71,101,1) 43%,rgba(64,68,98,1) 50%,rgba(61,65,95,1) 58%,rgba(57,61,92,1) 65%,rgba(54,58,89,1) 73%,rgba(51,54,86,1) 82%,rgba(48,52,83,1) 91%,rgba(45,49,81,1) 100%);
-  border-radius:4px 4px 100rpx 100rpx;
+  width: 750rpx;
+  height: 326rpx;
+  background:url(https://laowuquan.oss-cn-shanghai.aliyuncs.com/yunxiaobao/home-bg.png);
+  background-size:100%;
   display: flex;
 }
 
 .company {
   color: #FFFFFF;
-  background:#5E6179;
+  background:rgba(151,151,151,0.15);
   border-radius:24rpx;
   text-align: center;
   line-height: 48rpx;
   font-size:24rpx;
-  margin-top: 54rpx;
-  margin-bottom: 30rpx;
+  margin-top: 34rpx;
+  margin-bottom: 40rpx;
   float: left;
   padding-left: 20rpx;
   padding-right: 20rpx;
@@ -45,6 +45,14 @@
 .top_data .number{
   margin-top: 18rpx;
   color: #fff;
+  display: flex;
+}
+
+.top-up{
+  position: absolute;
+  right: 34rpx;
+  font-size: 30rpx;
+  color:rgba(255,255,255,.6);
 }
 
 .login{
@@ -111,7 +119,7 @@
 }
 
 .cont_box{
-  background: #fff;
+  /* background: #fff; */
 }
 
 .nav{
@@ -143,32 +151,44 @@
 .tool_box{
   display:flex;
   flex-wrap: wrap;
+  justify-content: center;
+ 
 }
 
 .tool_list{
-  width:333rpx;
-  height:202rpx;
-  background:#F3F5F7;
+  width:212rpx;
+  height:282rpx;
+  /* background:#F3F5F7; */
+  background-size: 100%;
   border-radius:6rpx;
   margin-bottom: 16rpx;
+  margin-right: 22rpx;
 }
 
-.tool_list:nth-child(2n+1){
-  margin-right: 16rpx;
+.index_icon{
+  width: 54rpx;
+  height: 54rpx;
+  margin: 42rpx 0 50rpx 34rpx;
+}
+
+.tool_list:nth-child(3n){
+  margin-right: 0;
 }
 
 .tool_list .title{
   margin-left: 30rpx;
-  margin-top: 20rpx;
   margin-bottom: 13rpx;
-  font-weight: 600;
+  font-weight: bold;
   color: #363636;
+  line-height: 30rpx;
+  font-size: 28rpx;
 }
+
 .tool_list .instructions{
   width: 154rpx;
   margin-left: 30rpx;
-  font-size: 24rpx;
-  color: #999999;
+  font-size: 18rpx;
+  color: #BFC5CC;
 }
 
 /* 保险方案 */
