--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -8,6 +8,10 @@
   </view>
   <view class="auth-title">申请获取以下权限</view>
   <view class="auth-subtitle">获得你的公开信息（昵称、头像等）</view>
-  <button class="login-btn" openType="getUserInfo" lang="zh_CN" bindgetuserinfo="authorLogin">确认授权</button>
+  <view class="button">
+    <button class="cancelLogin-btn" bindtap="cancelLogin">取消</button>
+    <button class="login-btn" openType="getUserInfo" lang="zh_CN" bindgetuserinfo="authorLogin">确认授权</button>
+  </view>
+
 </view>
 <!-- </view> -->
