--- a/pages/record/details.wxml
+++ b/pages/record/details.wxml
@@ -1,16 +1,16 @@
 <!--pages/user/index.wxml-->
 <view class="top_box padding_34">
 	<view class="top_one color4 weight500">
-		<view>方案类型：{{list.policy_type}}</view>
+		<view>方案类型：{{list.plan}}</view>
 		<view>操作类型：
-			<text wx:if="{{list.type == '加保'}}" class="{{list.type=='减保'?'color1':'color2'}}">{{words.A3}}</text>
-			<text wx:elif="{{list.type == '减保'}}" class="{{list.type=='减保'?'color1':'color2'}}">{{words.A4}}</text>
-			<text wx:elif="{{list.type == '期初投保'}}" class="{{list.type=='减保'?'color1':'color2'}}">{{list.type}}</text>
+			<text wx:if="{{list.type == '加保'}}" class="{{list.type=='减保'?'color8':'color7'}}">{{words.A3}}</text>
+			<text wx:elif="{{list.type == '减保'}}" class="{{list.type=='减保'?'color8':'color7'}}">{{words.A4}}</text>
+			<text wx:elif="{{list.type == '期初投保'}}" class="{{list.type=='减保'?'color8':'color7'}}">{{list.type}}</text>
 		</view>
 	</view>
 	<view class="top_one color5 weight400">
 		<view>操作人数：{{list.count}}</view>
-		<view>{{words.C11}}：<text  class="{{list.type=='减保'?'color1':'color2'}}">{{list.premium}}</text></view>
+		<view>{{words.C11}}：<text  class="{{list.type=='减保'?'color8':'color7'}}">{{list.premium}}</text></view>
 	</view>
 	<view class="top_two color5 weight400">
 		<view>生效日期：{{list.start_date}}</view>
