--- a/pages/reduce-insurance/reduce.wxss
+++ b/pages/reduce-insurance/reduce.wxss
@@ -17,8 +17,8 @@
 }
 
 .remind{
- 	color: #EA4335;
-	font-size: 24rpx;
+ 	color: #F57929;
+	font-size: 32rpx;
 	margin-left: 34rpx;
 /*	margin-top: 24rpx;
 	margin-bottom:24rpx ;*/
@@ -27,8 +27,7 @@
 }
 
 .scroll{
-	min-height:276rpx;
-	 max-height:576rpx;
+	 max-height:786rpx;
 	/* background: #F6F8F8; */	
 	/* padding: 24rpx 0; */
 }
@@ -40,7 +39,6 @@
 
 
 .personnel_list{
-	display: flex;
 	color: #363636;
 	font-size: 32rpx;
 	padding-top: 30rpx;
@@ -48,13 +46,30 @@
 	border-bottom: 1rpx solid #F3F5F7;
 }
 
-.personnel_list .name{
-	width: 40%;
+.icon-duigouxiao{
+	line-height: 46rpx;
+	margin-right: 20rpx;
+	font-size: 40rpx;
 }
 
+.personnel_list .name{
+	margin-right: 50rpx;
+}
 
-.personnel_list .id_card{
-	width: 60%;
+.date_box{
+	background:linear-gradient(132deg,#48C3E7 0%,#2D7CF5 100%);
+	border-radius: 6rpx;
+	margin-left: 60rpx;
+	margin-right: 20rpx;
+	color: #fff;
+	text-align: center;
+	padding-left: 10rpx;
+	padding-right: 10rpx;
+}
+
+.search_company{
+	font-size:28rpx;
+	color: #363636;
 }
 
 .cancel_box{
@@ -67,7 +82,7 @@
 	width: 10%;
 	padding: 34rpx;
 	float: right;
-	color: #12C286;
+	color: #38358F;
 	font-size: 32rpx;
 }
 
@@ -100,20 +115,20 @@
 
 .top_box{
   width: 750rpx;
-  height: 468rpx;
+  height: 268rpx;
+  color: #FFF;
   background-repeat: no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
   -o-background-size: cover;
   background-position: center 0;
-  background-image: url('http://lgb.laowuquan.cc/assets/api/customer-bg.png');
+  background-image: url('https://laowuquan.oss-cn-shanghai.aliyuncs.com/yunxiaobao/add-subtract-bg.png');
 }
 
 .top_box .title{
-	color: #FFF;
-	font-size: 54rpx;
+	font-size: 48rpx;
 	font-weight:500;
-	margin-left: 88rpx;
+	margin-left: 34rpx;
 	padding-top: 64rpx;
 
 }
@@ -127,14 +142,14 @@
 	color: #ABBDCD;
 }
 
+.top_box .plan_box{
+	display: flex;
+	margin-top: 12rpx;
+	color:rgba(255, 255, 255, .6)
+}
+
 .add_box{
-	/* width: 682rpx; */
-	/* height: 96rpx; */
-	/* background: rgba(255, 255, 255, 0.12);/ */
-	/* margin: 0 auto; */
-	margin-left: 34rpx;
-	margin-right: 34rpx;
-	margin-top: 54rpx;
+	margin:10rpx 34rpx;
 	color:rgba(255, 255, 255, 0.3);
 	font-size: 50rpx;
 	display: flex;
@@ -144,16 +159,17 @@
 .add_box input{
 	width: 426rpx;
 	margin: auto 0;
-	padding: 34rpx 0;
+	padding: 24rpx 0;
 	padding-left: 54rpx;
 	padding-right: 54rpx;
-	background: rgba(255, 255, 255, 0.12);
-	color: #FFF;
+	background: #F6F8F8;
+	color: #363636;
 	font-size: 32rpx;
+	border-radius: 8rpx;
 }
 
 .add_box .input-placeholder{
-	color: rgba(255, 255, 255, 0.6);
+	color:#999999;
 }
 
 .add_box .search{
@@ -162,10 +178,40 @@
 	text-align: center;
 	height: 100%;
 	width: 122rpx;
-	line-height: 120rpx;
+	line-height: 100rpx;
 	font-size: 50rpx;
-	background: rgba(255, 255, 255, 0.12);
+	background: #F6F8F8;
+	color: #999999;
+	border-radius: 8rpx;
+}
+
+.add_box2{
+	display: flex;
+	margin-left: 34rpx;
+	margin-right: 34rpx;
+	background:#fff;
+	border-radius: 12rpx;
+	padding: 31rpx 42rpx;
+	margin-top: -70rpx;
+	justify-content: space-between;
+}
+
+.add{
+	width: 66rpx;
+	height: 66rpx;
+	background:#38358F;
+	text-align: center;
+	line-height: 66rpx;
 	color: #fff;
+	font-size: 35rpx;
+	border-radius: 50%;
+	margin:auto 0;
+}
+
+.is_search{
+	text-align: center;
+	padding: 20rpx 0;
+	color: #666;
 }
 
 .add_box button{
@@ -198,9 +244,8 @@
 }
 
 .list_box{
-	min-height: 624rpx;
-	background: #FFF;
-	padding-bottom: 100rpx;
+	margin-bottom: 130rpx;
+	margin-top: 24rpx;
 }
 
 .list_box .none{
@@ -212,19 +257,21 @@
 .list{
 	width: 100%;
 	display:inline-block;
-	margin-top: 20rpx;
+	background:#fff;
+	border-radius:4rpx;
+	margin-top: 24rpx;
 }
 
 .company_box{
 	display: flex;
 	align-items: center;
+	margin-top: 24rpx;
 }
 
 .list .decoration{
 	width: 8rpx;
 	height: 24rpx;
-	background: #000;
-    background:linear-gradient(315deg,rgba(0,223,179,1) 0%,rgba(0,197,219,1) 100%);
+    background:#38358F;
     margin-right: 18rpx;
 }
 
@@ -265,16 +312,16 @@
 .delete_box{
 	padding: 20rpx;
 }
+
 .name_info .delete{
 	width: 34rpx;
 	height: 34rpx;
-	background: #12C286;
+	background: #F57929;
 	color: #FFF;
 	border-radius: 50%;
-	line-height: 32rpx;
+	line-height: 34rpx;
 	text-align: center;
 	font-size: 30rpx;
-
 }
 
 .add_insurance button{
