--- a/pages/staff-query/index.wxss
+++ b/pages/staff-query/index.wxss
@@ -243,12 +243,12 @@
 }
 
 .notIn_label{
-	border: 1rpx solid #EA4335;
-	color: #EA4335;
+	border: 1rpx solid #F57929;
+	color: #F57929;
 }
 
 
 .in_label{
-	border: 1rpx solid #12C286;
-	color: #12C286;
+	border: 1rpx solid #38358F;
+	color: #38358F;
 }
