--- a/pages/insurance-policy/index.wxml
+++ b/pages/insurance-policy/index.wxml
@@ -1,15 +1,26 @@
 <!--pages/insurance-policy/index.wxml-->
 <view>
-	<navigator url="details?policy_id={{item.policy_id}}" class="list {{item.is_active==1?'list_bg':'list_failure_bg'}}"  wx:for="{{list}}" wx:key="index">
+	<navigator url="details?policy_id={{item.policy_id}}" class="list {{item.is_active==1?'':'color_C5C7C6'}}" wx:for="{{list}}" wx:key="index">
 		<view class="list_top">
-			<image wx:if="{{item.is_active!=1}}" class="failure_image" src="/images/failure.png"></image>
-			<view class="title">方案类型：{{item.plan}}</view>
-			<view class="list_info">
-				<view>{{words.C4}}：{{item.count}}</view>
-				<view class="margin_l_100">总费用：¥{{item.premium}}</view>
+			<view class="list_top_left">
+				<view class="title">方案类型：{{item.plan}}</view>
+				<view class="list_info">
+					<view>{{words.C5}}：{{item.start_date}} 至 {{item.end_date}}</view>
+				</view>
+				<view class="list_info">
+					<view>{{words.C4}}：{{item.count}}</view>
+					<view class="margin_l_100">总费用：¥{{item.premium}}</view>
+				</view>
+			</view>
+			<view class="list_top_right">
+				<view class="font_size26 color3">已保障</view>
+				<view>
+					<text class="font_size42 color2 weight600" style="margin-right:10rpx">14</text>
+					<text class="font_size26">天</text>
+				</view>
 			</view>
 		</view>
-		<view class="list_bottom {{item.is_active== 1?'list_bottom_bg':'list_bottom_failure_bg'}} ">{{words.C5}}：{{item.start_date}}  至  {{item.end_date}}</view>
+		<view class="list_bottom" wx:if="{{item.is_active==1}}">申请电子保单</view>
 	</navigator>
 </view>
 <view style="color:#bbb;padding-bottom:40rpx;padding-top:40rpx;font-size:28rpx;text-align:center;">
@@ -17,11 +28,11 @@
 		加载中...
 	</view>
 	<view wx:elif="{{list.length == 0}}">
-	  暂无内容
+		暂无内容
 	</view>
 	<view wx:else>
-	  <text wx:if="{{len == total}}">没有更多了</text>
-	  <text wx:elif="{{isLoading}}">加载中...</text>
+		<text wx:if="{{len == total}}">没有更多了</text>
+		<text wx:elif="{{isLoading}}">加载中...</text>
 		<view style="height:90rpx" wx:else></view>
 	</view>
 
