--- a/pages/insurance-policy/index.wxss
+++ b/pages/insurance-policy/index.wxss
@@ -1,6 +1,6 @@
 /* pages/insurance-policy/index.wxss */
 page{
-	background: #fff;
+	background: #F6F8F8;
 }
 .list_bg{
 	background:rgba(56,53,143,.06);
@@ -19,49 +19,60 @@ page{
 	background: #F57929;
 }
 
-.failure_image{
-	width: 88rpx;
-	height: 88rpx;
-	position: absolute;
-	right: 18rpx;
-	top: 20rpx;
-}
-
 .list{
-	height: 230rpx;
+	/* height: 230rpx; */
 	margin-left: 34rpx;
 	margin-right: 34rpx;
-	border-radius: 6rpx;
+	border-radius: 12rpx;
 	position: relative;
-	margin-top: 50rpx;
-    box-shadow: 0rpx 5rpx 16rpx #D0CFD1;
-
+	margin-top: 30rpx;
+	background:#FFF;
 }
 
 .list_top{
-	margin-left: 24rpx;
-	padding-top: 14rpx;
-	line-height: 60rpx;
+	margin:0 24rpx;
+	padding-top: 36rpx;
+	padding-bottom: 48rpx;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
-
+.list_top_left{
+	width: 70%;
+}
+.list_top_right{
+	width: 20%;
+}
 .list_top .title{
 	color: #363636;
 	font-weight: 600;
+	font-size: 30rpx;
 }
 
 .list_top .list_info{
-	color: #666666;
+	color: #999999;
 	display: flex;
+	font-size: 26rpx;
+}
+.list_top .list_info:nth-child(2){
+	padding-top: 24rpx;
 }
 
 .list_bottom{
-	width: 100%;
-	height: 74rpx;
-	position: absolute;
-	bottom: 0;
+	height: 112rpx;
 	text-align: center;
-	line-height: 74rpx;
-	font-size: 24rpx;
+	line-height: 112rpx;
+	font-size: 32rpx;
 	font-weight: 400;
-	color: #fff;
+	color:#08C684;
+	border-top: 1rpx solid #F2F2F2;
+	margin-left: 30rpx;
+	margin-right: 30rpx;
+}
+
+.color_C5C7C6 .title,
+.color_C5C7C6 .list_info,
+.color_C5C7C6 text,
+.color_C5C7C6 view{
+	color:#C5C7C6 !important;
 }
